force-app/main/default/objects/numm__AccountingCode__c/numm__AccountingCode__c.object-meta.xml
<CustomObject>
    <description>Objet des comptes généraux</description>
    <label>Plan comptable</label>
    <nameField>
        <label>Compte général</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan comptable</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>