force-app/main/default/objects/numm__AccountingCode__c/fields/numm__Analytique10__c.field-meta.xml
<CustomField>
    <fullName>numm__Analytique10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analytique 10</label>
    <referenceTo>numm__CostAccountingValues__c</referenceTo>
    <relationshipName>Plans_Comptable9</relationshipName>
    <type>Lookup</type>
</CustomField>