force-app/main/default/objects/numm__AccountingCode__c/fields/numm__BILCR__c.field-meta.xml
<CustomField>
    <fullName>numm__BILCR__c</fullName>
    <inlineHelpText>Dire si on retrouve le compte dans le Bilan ou Compte de résultat.</inlineHelpText>
    <label>Bilan ou Compte de résultat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bilan</fullName>
            </value>
            <value>
                <fullName>Compte de résultat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>