force-app/main/default/objects/numm__AccountingCode__c/fields/numm__Categorie_de_compte__c.field-meta.xml
<CustomField>
    <fullName>numm__Categorie_de_compte__c</fullName>
    <inlineHelpText>La catégorie de compte permet de dire si un compte est enregistré pour son montant HT, TVA ou TTC.</inlineHelpText>
    <label>Catégorie de compte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TTC</fullName>
            </value>
            <value>
                <fullName>TVA</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>