force-app/main/default/objects/numm__AccountingCode__c/fields/numm__CCA_PCA__c.field-meta.xml
<CustomField>
    <fullName>numm__CCA_PCA__c</fullName>
    <label>CCA / PCA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCA</fullName>
            </value>
            <value>
                <fullName>PCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>