force-app/main/default/objects/numm__AccountingCode__c/fields/numm__Compte_Ecart_de_change__c.field-meta.xml
<CustomField>
    <fullName>numm__Compte_Ecart_de_change__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher cette casse pour indiquer que ce compte est un compte d&#39;écart de change.</inlineHelpText>
    <label>Compte d&#39;écart de change</label>
    <type>Checkbox</type>
</CustomField>