force-app/main/default/objects/numm__AccountingCode__c/fields/numm__DAS2__c.field-meta.xml
<CustomField>
    <fullName>numm__DAS2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher ce choix pour définir sir le compte général est un compte de type DAS 2</inlineHelpText>
    <label>DAS2</label>
    <type>Checkbox</type>
</CustomField>