force-app/main/default/objects/numm__AccountingCode__c/fields/numm__DefaultInput__c.field-meta.xml
<CustomField>
    <fullName>numm__DefaultInput__c</fullName>
    <inlineHelpText>Le sens de la saisie par défaut d&#39;un compte permet d&#39;accélérer la saisie en positionnant le curseur directement dans la bonne colonne et initialise le montant (dans le cas d&#39;achat ou vente)</inlineHelpText>
    <label>Sens par défaut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Débit</fullName>
            </value>
            <value>
                <fullName>Crédit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>