force-app/main/default/objects/numm__AccountingCode__c/fields/numm__Deposit__c.field-meta.xml
<CustomField>
    <fullName>numm__Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher ce choix lorsque le compte est un compte d&#39;acompte</inlineHelpText>
    <label>Acompte</label>
    <type>Checkbox</type>
</CustomField>