force-app/main/default/objects/numm__AccountingCode__c/fields/numm__FEC_NoTiers__c.field-meta.xml
<CustomField>
    <fullName>numm__FEC_NoTiers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export FEC sans tiers</label>
    <type>Checkbox</type>
</CustomField>