force-app/main/default/objects/numm__AccountingCode__c/fields/numm__HasAnalytics__c.field-meta.xml
<CustomField>
    <fullName>numm__HasAnalytics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field tell wether this general account has analytics details to show on the vf page</description>
    <inlineHelpText>Cocher ce choix pour définir si le compte est suivi en analytique</inlineHelpText>
    <label>Suivi analytique</label>
    <type>Checkbox</type>
</CustomField>