force-app/main/default/objects/numm__AccountingCode__c/fields/numm__IdCtrlAccounting__c.field-meta.xml
<CustomField>
    <fullName>numm__IdCtrlAccounting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collectif</label>
    <referenceTo>numm__CtrlAccounting__c</referenceTo>
    <relationshipName>IdCtrlAccounting</relationshipName>
    <type>Lookup</type>
</CustomField>