force-app/main/default/objects/numm__AccountingCode__c/fields/numm__Immobilisation__c.field-meta.xml
<CustomField>
    <fullName>numm__Immobilisation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher ce choix pour définir un compte de type Immobilisation</inlineHelpText>
    <label>Immobilisation</label>
    <type>Checkbox</type>
</CustomField>