force-app/main/default/objects/numm__AccountingCode__c/fields/numm__LockedDate__c.field-meta.xml
<CustomField>
    <fullName>numm__LockedDate__c</fullName>
    <description>Date de blocage</description>
    <inlineHelpText>Aucune écriture ne pourra être saisie à partir de la dâte indiquée dans ce champ</inlineHelpText>
    <label>Date de blocage</label>
    <type>Date</type>
</CustomField>