force-app/main/default/objects/numm__AccountingCode__c/fields/numm__Repartissable__c.field-meta.xml
<CustomField>
    <fullName>numm__Repartissable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Compte répartissable. Gestion des propriétaires</description>
    <label>Répartissable</label>
    <type>Checkbox</type>
</CustomField>