force-app/main/default/objects/numm__AccountingCode__c/fields/numm__ResultatExercice__c.field-meta.xml
<CustomField>
    <fullName>numm__ResultatExercice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Résultat de l&#39;exercice</label>
    <type>Checkbox</type>
</CustomField>