force-app/main/default/objects/numm__AccountingCode__c/fields/numm__Rubrique__c.field-meta.xml
<CustomField>
    <fullName>numm__Rubrique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Edition Bilan et CR</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Section__c.numm__Axe_Rubrique__r.numm__Type__c</field>
            <operation>equals</operation>
            <value>Comptes généraux</value>
        </filterItems>
        <filterItems>
            <field>numm__Section__c.numm__Axe_Rubrique__r.numm__NumSection__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>numm__Section__c</referenceTo>
    <relationshipLabel>Plan comptable</relationshipLabel>
    <relationshipName>Plan_comptable</relationshipName>
    <type>Lookup</type>
</CustomField>