force-app/main/default/objects/numm__AccountingCode__c/fields/numm__TECH_Category__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Category__c</fullName>
    <formula>&quot;O&quot;</formula>
    <label>TECH Catégorie</label>
    <type>Text</type>
</CustomField>