force-app/main/default/objects/numm__AccountingCode__c/fields/numm__Tech_CompteGeneral__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_CompteGeneral__c</fullName>
    <description>IDExterne pour update</description>
    <externalId>true</externalId>
    <label>Tech_CompteGeneral</label>
    <length>10</length>
    <type>Text</type>
</CustomField>