force-app/main/default/objects/numm__AccountingCode__c/fields/numm__Tech_DebitCompteResultat__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_DebitCompteResultat__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tech_DebitCompteResultat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>