force-app/main/default/objects/numm__AccountingCode__c/fields/numm__TECH_HasAnalytics__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_HasAnalytics__c</fullName>
    <description>return whether there is analytics defined by the analytics fields</description>
    <formula>IF( NOT(ISBLANK(numm__Analytique1__c)),true,
IF( NOT(ISBLANK(numm__Analytique2__c)),true,
IF( NOT(ISBLANK(numm__Analytique3__c)),true,
IF( NOT(ISBLANK(numm__Analytique4__c)),true,
IF( NOT(ISBLANK(numm__Analytique5__c)),true,
IF( NOT(ISBLANK(numm__Analytique6__c)),true,
IF( NOT(ISBLANK(numm__Analytique7__c)),true,
IF( NOT(ISBLANK(numm__Analytique8__c)),true,
IF( NOT(ISBLANK(numm__Analytique9__c)),true,
IF( NOT(ISBLANK(numm__Analytique10__c)),true,false))))))))))</formula>
    <inlineHelpText>Determine whether there is analytics defined by the analytics fields</inlineHelpText>
    <label>TECH_HasAnalytics</label>
    <type>Checkbox</type>
</CustomField>