force-app/main/default/objects/numm__AccountingCode__c/fields/numm__TECH_Type__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Type__c</fullName>
    <formula>IF(
    VALUE(LEFT(Name, 1)) &lt;= 5,
    &#39;Bilan&#39;,
    &#39;Exploitation&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Type</label>
    <type>Text</type>
</CustomField>