force-app/main/default/objects/numm__AccountingCode__c/fields/numm__Type_de_compte__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_compte__c</fullName>
    <inlineHelpText>Le type de compte permet de dire si un compte est normal, lettrable ou pointable</inlineHelpText>
    <label>Type de compte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Lettrable</fullName>
            </value>
            <value>
                <fullName>Pointable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>