force-app/main/default/objects/numm__AccountingCode__c/fields/numm__VATRate__c.field-meta.xml
<CustomField>
    <fullName>numm__VATRate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Code TVA par défaut du compte</inlineHelpText>
    <label>Code TVA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__VATRate__c.numm__Prorata__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__VATRate__c</referenceTo>
    <relationshipName>VATCODE</relationshipName>
    <type>Lookup</type>
</CustomField>