force-app/main/default/objects/numm__AccountingCode__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>NAME</columns>
    <columns>numm__BILCR__c</columns>
    <columns>numm__Description__c</columns>
    <columns>numm__IdCtrlAccounting__c</columns>
    <columns>numm__DefaultInput__c</columns>
    <columns>numm__Categorie_de_compte__c</columns>
    <columns>numm__Type_de_compte__c</columns>
    <columns>numm__Compte_Ecart_de_reglement__c</columns>
    <columns>numm__HasAnalytics__c</columns>
    <columns>numm__Compte_Ecart_de_change__c</columns>
    <columns>numm__CCA_PCA__c</columns>
    <columns>numm__Deposit__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>