force-app/main/default/objects/numm__AccountingCode__c/listViews/numm__Comptes_HT.listView-meta.xml
<ListView>
    <fullName>numm__Comptes_HT</fullName>
    <columns>NAME</columns>
    <columns>numm__BILCR__c</columns>
    <columns>numm__Description__c</columns>
    <columns>numm__IdCtrlAccounting__c</columns>
    <columns>numm__DefaultInput__c</columns>
    <columns>numm__Type_de_compte__c</columns>
    <columns>numm__HasAnalytics__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>numm__Categorie_de_compte__c</field>
        <operation>equals</operation>
        <value>HT</value>
    </filters>
    <label>Comptes HT</label>
    <language>fr</language>
</ListView>